--- a/frontend/myCrossing/src/app/inicio/inicio.component.html
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.html
@@ -29,7 +29,7 @@
       <button id="criaturas-marinas" (mouseover)="imagen = 3">Criaturas marinas</button>
     </div>
   </div>
-  <hr id="hr-inicio">
+  <hr id="hr-azul">
   <div class="dv-inicio">
     <p id="titulo">¡Completa el Museo!</p>
     <div class="grid-3">
@@ -38,7 +38,7 @@
       <button id="arte">Arte</button>
     </div>
   </div>
-  <hr id="hr-inicio">
+  <hr id="hr-azul">
   <div class="dv-inicio">
     <p id="titulo">¡Ve de compras!</p>
     <div class="grid-4">
@@ -48,7 +48,7 @@
       <span>imagen</span>
     </div>
   </div>
-  <hr id="hr-inicio">
+  <hr id="hr-azul">
   <div class="dv-inicio">
     <p id="titulo">¡Una isla llena de vida!</p>
     <div class="grid-3">
