--- a/frontend/myCrossing/src/app/perfil/perfil.component.css
+++ b/frontend/myCrossing/src/app/perfil/perfil.component.css
@@ -12,6 +12,7 @@
 
 .wrapper-perfil {
   padding: 2vw;
+  background-color: rgba(247, 243, 232);
 }
 
 h2{
@@ -36,8 +37,9 @@ span {
 }
 
 .bckg{
+  height: 40vh;
   padding: 0.3vw 0;
-  margin-top: 1vw;
+  margin-top: 2vw;
   border-radius: 20px;
   position: relative;
   display: flex;
@@ -125,21 +127,12 @@ span {
 }
 
 #tools{
-  background-color: dodgerblue;
   margin: 0 2vw;
   border-radius: 30px;
 }
 
 #tools > h2 {
   text-align: center;
-}
-
-#misvecinos{
-  background-color:#fff3d3;
-}
-
-#coleccionesp{
- background-color: rgb(228, 255, 230);
 }
 
 .v-center{
