--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -29,15 +29,20 @@ body{
 }
 
 .editar{
+  position: absolute;
+}
+
+.boton-imagen{
   width: 2vw;
   height: 2vw;
-  position: absolute;
   background-size: contain;
   border: none;
   background-color: transparent;
   cursor: pointer;
   background-repeat: no-repeat;
 }
+
+
 
 .editar-blanco{
   background-image: url("./assets/images/editar-blanco.png");
@@ -52,7 +57,7 @@ body{
 }
 
 .save{
-  background-image: url("./assets/images/save.png");
+  background-image: url("./assets/images/save-verde.png");
 }
 
 .menu-hr{
@@ -97,6 +102,37 @@ body{
 
 .check-button-full{
   background-color: red;
+}
+
+#hr-azul{
+  border-width: 0.2vw;
+  border-style: solid;
+  width: 33%;
+  position: absolute;
+  border-color: #69c0c0;
+  margin-inline-start: 33%;
+  border-radius: 20px;
+  background-color:  #69c0c0;
+  margin-block-start: -2px;
+}
+
+.b-azul{
+  background-color: #d9f6f6;
+  border-color: #ade6e7;
+}
+
+.b-verde{
+  background-color: rgb(203, 244, 196);
+  border-color: rgb(149, 229, 155);
+}
+
+.b-amarillo{
+  background-color: #ffefc4;
+  border-color: #edd9a3;
+}
+
+.shadow{
+  box-shadow: 0px -10px 20px 0px rgb(23 23 23 / 55%);
 }
 
 
