--- a/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
+++ b/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
@@ -184,7 +184,7 @@
         </div>
     </div>
     <div class="flex-centered div-botones">
-        <button class="estelaButton" [style.border-color]="estela ? '#95E59B' : '#ade6e7' " [style.background-color]="estela ? '#CBF4C4' : '#d9f6f6' " (click)="cambiarEstela()">{{estela ? "Estela ya te ha visitado esta semana" : "Estela aún no te ha visitado"}}</button>
+        <button class="estelaButton boton-alargado" [style.border-color]="estela ? '#95E59B' : '#ade6e7' " [style.background-color]="estela ? '#CBF4C4' : '#d9f6f6' " (click)="cambiarEstela()">{{estela ? "Estela ya te ha visitado esta semana" : "Estela aún no te ha visitado"}}</button>
         <button class="boton-imagen save" style="margin-bottom: 1vw;" (click)="guardar()"></button>
     </div>
 </div>
