--- a/frontend/myCrossing/src/app/perfil/misvecinos/misvecinos.component.css
+++ b/frontend/myCrossing/src/app/perfil/misvecinos/misvecinos.component.css
@@ -15,7 +15,7 @@ p, span, li{
 #vecino-show{
   grid-row-start: 1;
   grid-row-end: 3;
-  background-color: chartreuse;
+  background-color: #ffefc4;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,13 +29,8 @@ p, span, li{
   height: 15vw;
 }
 
-#añadir{
-  background-color: rgb(104, 104, 104);
-  border-color: rgb(43, 43, 43);
-}
-
 .contenedor-vecino{
-  background-color: rgb(207, 237, 100);
+  background-color: #CBF4C4;
   margin: 1vw;
   padding: 1.5vw;
   border-radius: 20px;
@@ -43,13 +38,12 @@ p, span, li{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 65%;
+  height: 10vw;
 }
 
 .icono{
   width: 8vw;
   height: auto;
-  background-color: crimson;
 }
 
 .wrap-vecino{
@@ -59,15 +53,21 @@ p, span, li{
   align-items: center;
 }
 
+.amistad{
+  background-image: url("../../../assets/images/corazon.png");
+  filter: drop-shadow(2px -1px 0 #F7F3E8) drop-shadow(-2px 0px 0 #F7F3E8) drop-shadow(1px 2px 0 #F7F3E8);
+}
+
 #editar{
   right: 2vw;
   top: 45vw;
 }
 
 #moveout-info{
-  background-color: rgb(98, 98, 184);
+  background-color: #ffefc4;
   padding: 2vw;
   margin-bottom: 2vw;
+  border-radius: 30px;
 }
 
 #button-wrap{
@@ -76,20 +76,32 @@ p, span, li{
 }
 
 #close-menu{
-  background-color: rgb(71, 71, 133);
+  left: 92vw;
+  top: 59vw;
+  width: 2vw;
+  height: 2vw;
+  padding: 0;
 }
 
 .porcentaje{
   width: 5vw;
   margin: 1vw auto;
-  background-color: rgb(223, 119, 119);
   border-radius: 25px;
-  border-color: turquoise;
   border-width: 5px;
   border-style: solid;
   font-size: 1.2vw;
   justify-content: center;
   padding: 0.5vw;
   text-align: center;
+}
+
+.exclude-button{
+  width: 2vw;
+  height: 2vw;
+  background-size: contain;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  background-repeat: no-repeat;
 }
 
