view: Perfil done
-Fondo perfil

-Menus (TODO cuando APIs)

--- a/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
+++ b/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
@@ -1,6 +1,6 @@
 .visitasContainer{
     text-align: center;
-    background-color: #cde7e7;
+    background-color: #ffefc4;
     border-radius: 1vw;
     font-size: 1.5vw;
 }
@@ -36,7 +36,7 @@
     margin-left: 0.8vw;
     margin-right:  0.8vw;
     margin-top: 1vw;
-    background-color: #ffefc4;
+    background-color: #CBF4C4;
     border-radius: 50px;
     padding: 0.2vw;
 }
