--- a/frontend/myCrossing/src/app/perfil/perfil.component.css
+++ b/frontend/myCrossing/src/app/perfil/perfil.component.css
@@ -4,10 +4,13 @@
 }
 
 .user_info {
-  background-color: #c9f3f3;
+  background-image: url("../../assets/images/casa-playa-blur.png");
   padding: 7% 0 4vw 0;
   display: grid;
   grid-template-columns: 30vw auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .wrapper-perfil {
