--- a/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
+++ b/frontend/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
@@ -18,6 +18,7 @@
 .estelaButton{
     width: 40%;
     margin-bottom: 1vw;
+    font-size: 1.2vw;
 }
 .pasado, .cabeceraA, .presente{
     display: flex;
