--- a/project/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
+++ b/project/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.css
@@ -16,8 +16,6 @@
 }
 
 .estelaButton{
-    width: 40%;
-    margin-bottom: 1vw;
     font-size: 1.2vw;
 }
 .pasado, .cabeceraA, .presente{
@@ -93,8 +91,7 @@
     height: 3vw;
 }
 .image{
-    width: 2vw;
-    height: 3vw;
+    width: 3vw;
     height: 3vw;
 }
 
@@ -122,4 +119,12 @@
     border-style: solid;
     border-width: 0.5vw;
     box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
+}
+
+.estela-container{
+  display: flex;
+  width: 60%;
+  align-items: center;
+  /* justify-content: space-around; */
+  margin-bottom: 1vw;
 }
