view: Tarea & General
-Añadidos iconos tareas

-Menu tarea listo

-Add buttons improved

--- a/project/myCrossing/src/app/perfil/misvecinos/misvecinos.component.html
+++ b/project/myCrossing/src/app/perfil/misvecinos/misvecinos.component.html
@@ -81,7 +81,7 @@
     <ng-template #vacio>
       <div>
         <div class="contenedor-vecino">
-          <button class="boton-circular b-amarillo" id="añadir" (click)="abreMenu($event, null, false)">+</button>
+          <button class="b-bold boton-circular b-amarillo" id="añadir" (click)="abreMenu($event, null, false)">+</button>
         </div>
         <p [hidden]="!porcentajeMode" style="visibility: hidden;">%</p>
       </div>
