--- a/project/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
+++ b/project/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
@@ -28,7 +28,7 @@
         <div (click)="vacio($event,'lpr')" class="visita first">
             <ng-container *ngIf="isEmpty(lpr)">
                 <div>
-                    <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                    <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(lpr)">
@@ -41,7 +41,7 @@
         <div (click)="vacio($event,'mpr')" class="visita">
             <ng-container *ngIf="isEmpty(mpr)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(mpr)">
@@ -54,7 +54,7 @@
         <div (click)="vacio($event,'xpr')" class="visita">
             <ng-container *ngIf="isEmpty(xpr)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(xpr)">
@@ -67,7 +67,7 @@
         <div (click)="vacio($event,'jpr')" class="visita">
             <ng-container *ngIf="isEmpty(jpr)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(jpr)">
@@ -80,7 +80,7 @@
         <div (click)="vacio($event,'vpr')" class="visita">
             <ng-container *ngIf="isEmpty(vpr)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(vpr)">
@@ -108,7 +108,7 @@
         <div (click)="vacio($event,'lpa')" class="visita first">
             <ng-container *ngIf="isEmpty(lpa)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(lpa)">
@@ -121,7 +121,7 @@
         <div (click)="vacio($event,'mpa')" class="visita">
             <ng-container *ngIf="isEmpty(mpa)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(mpa)">
@@ -134,7 +134,7 @@
         <div (click)="vacio($event,'xpa')" class="visita">
             <ng-container *ngIf="isEmpty(xpa)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(xpa)">
@@ -147,7 +147,7 @@
         <div (click)="vacio($event,'jpa')" class="visita">
             <ng-container *ngIf="isEmpty(jpa)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(jpa)">
@@ -160,7 +160,7 @@
         <div (click)="vacio($event,'vpa')" class="visita">
             <ng-container *ngIf="isEmpty(vpa)">
                 <div>
-                  <button class="boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(vpa)">
