--- a/project/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
+++ b/project/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
@@ -1,18 +1,18 @@
   <div style="width: 20vw" class="popup-menu" #menuDiv>
     <form [formGroup]="iconoForm" (ngSubmit)="enviar(iconoForm.value)">
       <label>Icono</label>
+      <div class="icon-wrap-menu">
+        <ng-container *ngFor="let icono of iconos">
+          <label>
+            <input formControlName="icono" type="radio" value="{{icono}}" class="radio-hidden">
+            <img src="../../../../assets/images/{{icono}}.png" [class]="iconoForm.value['icono'] == icono ? 'img-radio img-radio-checked' : 'img-radio'">
+          </label>
+        </ng-container>
+      </div>
       <br />
-      <input formControlName="icono" type="radio" value="1">
-      <input formControlName="icono" type="radio" value="2">
-      <input formControlName="icono" type="radio" value="3">
-      <input formControlName="icono" type="radio" value="4">
-      <input formControlName="icono" type="radio" value="5">
-      <br />
-      <button [disabled]="iconoForm.invalid" type="submit">Actualizar</button>
+      <div style="display: flex; justify-content: space-between;">
+        <button [disabled]="iconoForm.invalid" type="submit" class="boton-alargado b-azul">Actualizar</button>
+        <button (click)="borrarTarea(tarea)" class="boton-imagen delete"></button>
+      </div>
     </form>
-    <hr class="menu-hr">
-    <div>
-      <button (click)="borrarTarea(tarea)" class="btn-borrar">D</button>
-      <span>Borrar</span>
-    </div>
   </div>
