--- a/project/myCrossing/src/app/perfil/tareas/tareas.component.html
+++ b/project/myCrossing/src/app/perfil/tareas/tareas.component.html
@@ -4,12 +4,12 @@
 
     <!-- Tarea done -->
     <ng-container *ngIf="tarea.hecha == true; else todo">
-      <button (click)="!modoEdicion ? checkTarea(tarea) : abreMenu($event, tarea)" class="boton-circular b-verde">{{tarea.imagen_url}}</button>
+      <button (click)="!modoEdicion ? checkTarea(tarea) : abreMenu($event, tarea)" class="boton-circular b-verde bckg-img-boton" [style.background-image]="'url(../../../assets/images/'+ tarea.imagen_url + '.png)'"></button>
     </ng-container>
 
     <!-- Tarea todo -->
     <ng-template #todo>
-      <button (click)="!modoEdicion ? checkTarea(tarea) : abreMenu($event, tarea)" class="boton-circular b-azul">{{tarea.imagen_url}}</button>
+      <button (click)="!modoEdicion ? checkTarea(tarea) : abreMenu($event, tarea)" class="boton-circular b-azul bckg-img-boton" [style.background-image]="'url(../../../assets/images/'+ tarea.imagen_url + '.png)'"></button>
     </ng-template>
 
   </ng-container>
@@ -19,7 +19,7 @@
 
   <!-- Boton crear -->
   <ng-container *ngIf="modoEdicion && data[0].length < 10">
-    <button (click)="crearTarea()" class="boton-circular b-amarillo">+</button>
+    <button (click)="crearTarea()" class="b-bold boton-circular b-amarillo">+</button>
   </ng-container>
 
   <!-- Boton modo edicion -->
