feat: API CE - CE Roto
-Cambiado $error por $validation (los nuevos)

-Hecho metodo update para el inventario general (falta filtrarlos para que solo coja los de las colecciones)

-Hecho metodos CE API

-Hecho el metodo update de CE dentro del php (falta postdata y query)

(Necesito descansar y guardar el codigo)

--- a/project/myCrossing/src/app/perfil/coleccionesp/coleccionesp.component.html
+++ b/project/myCrossing/src/app/perfil/coleccionesp/coleccionesp.component.html
@@ -20,7 +20,7 @@
           <button [style]="{'background-image': checkTieneItem(listaUsuario.includes(item))}" class="boton-imagen editar" (click)="toggleCheck(item)"></button>
         </div>
         <div class="item flex-column-centered">
-          <img src="../../../assets/images/logo.png">
+          <img src="http://acnhapi.com/v1/images/furniture/{{item}}">
           <span>{{item}}</span>
         </div>
       </div>
@@ -32,4 +32,3 @@
   </div>
 </div>
 <span>Página {{page_number}}</span>
-
